# bim2sim

./: .condarc  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Base.Dockerfile  CONTRIBUTING.md  Dockerfile  Dockerfile_CFD  Dymola.Dockerfile  EnergyPlus.Dockerfile  EnergyPlusBase.Dockerfile  README.md  base-workenv.yml  conda-requirements.txt  conda_requirements.txt  config.toml  dependency_requirements.txt  docker.gitlab-ci.yml  docstrings_example.py  env.yaml  envBase.Dockerfile  envBaseDymola.Dockerfile  environment.yaml  environment.yml  meta.yaml  micromamba.Dockerfile  micromambaDymola.Dockerfile  micromambaEnergyPlus.Dockerfile  myexample.html  new.Dockerfile  paper.bib  paper.md  pylintrc_80  pylintrc_chatgpt4  pylintrc_docstringStart_wrong  pylintrc_newdocstyle_wrong  pyproject.toml  (+10 more)
2/: bim2sim.decision.doctree  bim2sim.doctree  bim2sim.enrichment_data.doctree  bim2sim.examples.doctree  bim2sim.export.doctree  bim2sim.export.modelica.doctree  bim2sim.kernel.building.doctree  bim2sim.kernel.cfd.doctree  bim2sim.kernel.doctree  bim2sim.kernel.elements.doctree  bim2sim.kernel.hvac.doctree  bim2sim.plugins.PluginAixLib.bim2sim_aixlib.doctree  bim2sim.plugins.PluginAixLib.bim2sim_aixlib.models.doctree  bim2sim.plugins.PluginAixLib.doctree  bim2sim.plugins.PluginAixLib.test.doctree  bim2sim.plugins.PluginAixLib.test.integration_test.doctree  bim2sim.plugins.PluginAixLib.test.unit.doctree  bim2sim.plugins.PluginAixLib.test.unit.kernel.doctree  bim2sim.plugins.PluginAixLib.test.unit.kernel.task.doctree  bim2sim.plugins.PluginCFD.bim2sim_cfd.doctree  bim2sim.plugins.PluginCFD.bim2sim_cfd.task.doctree  bim2sim.plugins.PluginCFD.doctree  bim2sim.plugins.PluginCFD.test.doctree  bim2sim.plugins.PluginCFD.test.integration_test.doctree  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.doctree  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.task.doctree  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.utils.doctree  bim2sim.plugins.PluginEnergyPlus.doctree  bim2sim.plugins.PluginEnergyPlus.test.doctree  bim2sim.plugins.PluginEnergyPlus.test.integration_test.doctree  bim2sim.plugins.PluginEnergyPlus.test.regression_test.doctree  bim2sim.plugins.PluginLCA.bim2sim_lca.doctree  bim2sim.plugins.PluginLCA.bim2sim_lca.task.doctree  bim2sim.plugins.PluginLCA.doctree  bim2sim.plugins.PluginLCA.test.doctree  bim2sim.plugins.PluginLCA.test.integration_test.doctree  bim2sim.plugins.PluginTEASER.bim2sim_teaser.doctree  bim2sim.plugins.PluginTEASER.bim2sim_teaser.export.doctree  bim2sim.plugins.PluginTEASER.bim2sim_teaser.models.doctree  bim2sim.plugins.PluginTEASER.bim2sim_teaser.task.doctree  (+15 more)
Enrichment Data/: TypeBuildingElements.json  dataclass.py
Environment/: Dockerfile  Dockerfile_Base  Dockerfile_Base_Ubuntu  Dockerfile_CFD  Dockerfile_EP  environment.yml
Examples/: e1_simple_project_bps.py  e1_simple_project_bps_teaser.py  e2_interactive_project.py  e3_simple_project_bps_energyplus.py  e4_simple_project_hvac_aixlib.py  e5_export_quantities_for_lca.py
Ifc_Tool/: Ifc_Overwriter_Tool.py
MainLib/: README.md  envBase.Dockerfile  envDebianOld.Dockerfile  environment.yml  requirements.txt  run_tests.py  setup.py
Octree/: octree.py  octree_kernel.py
PluginCFD/: cfd.Dockerfile  envCFD.Dockerfile
PluginEnergyPlus/: setup.py
PluginIFCparser/: LICENSE  README.md  Schema2Python.py  convert_schema.py  dump_data.py  elements_specific_schema.json  schema2python.py
PluginTEASER/: envTEASER.Dockerfile  requirements.txt  teaser.Dockerfile
ResultFiles/: AC20-FZK-Haus_2020-11-04-13_50_35.stl  AC20-Institute-Var-2_2020-11-04-13_54_12.stl
Versions/: Dockerfile_CFD
bim2sim/: __init__.py  __main__.py  decorators.py  filter.py  log.py  project.py  sim_settings.py  simulation_settings.py  simulation_type.py  tcp_connection.py  test.py  workflow.py
builddir/: .buildinfo  bim2sim.decision.html  bim2sim.enrichment_data.html  bim2sim.examples.html  bim2sim.export.html  bim2sim.export.modelica.html  bim2sim.html  bim2sim.kernel.building.html  bim2sim.kernel.cfd.html  bim2sim.kernel.elements.html  bim2sim.kernel.html  bim2sim.kernel.hvac.html  bim2sim.plugins.PluginAixLib.bim2sim_aixlib.html  bim2sim.plugins.PluginAixLib.bim2sim_aixlib.models.html  bim2sim.plugins.PluginAixLib.html  bim2sim.plugins.PluginAixLib.test.html  bim2sim.plugins.PluginAixLib.test.integration_test.html  bim2sim.plugins.PluginAixLib.test.unit.html  bim2sim.plugins.PluginAixLib.test.unit.kernel.html  bim2sim.plugins.PluginAixLib.test.unit.kernel.task.html  bim2sim.plugins.PluginCFD.bim2sim_cfd.html  bim2sim.plugins.PluginCFD.bim2sim_cfd.task.html  bim2sim.plugins.PluginCFD.html  bim2sim.plugins.PluginCFD.test.html  bim2sim.plugins.PluginCFD.test.integration_test.html  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.html  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.task.html  bim2sim.plugins.PluginEnergyPlus.bim2sim_energyplus.utils.html  bim2sim.plugins.PluginEnergyPlus.html  bim2sim.plugins.PluginEnergyPlus.test.html  bim2sim.plugins.PluginEnergyPlus.test.integration_test.html  bim2sim.plugins.PluginEnergyPlus.test.regression_test.html  bim2sim.plugins.PluginLCA.bim2sim_lca.html  bim2sim.plugins.PluginLCA.bim2sim_lca.task.html  bim2sim.plugins.PluginLCA.html  bim2sim.plugins.PluginLCA.test.html  bim2sim.plugins.PluginLCA.test.integration_test.html  bim2sim.plugins.PluginTEASER.bim2sim_teaser.export.html  bim2sim.plugins.PluginTEASER.bim2sim_teaser.html  bim2sim.plugins.PluginTEASER.bim2sim_teaser.models.html  (+20 more)
ci/: Code-Quality.gitlab-ci.yml  Dockerfile  Dymola.Dockerfile  EnergyPlusBase.Dockerfile  README.md  builds_releases.gitlab-ci.yml
ci_templates/: CI_README.md  README.md  build-env-plugins.gitlab-ci.yml  build-env.gitlab-ci.yml  build-tool.gitlab-ci.yml  build_conda.gitlab-ci.yml  build_conda_base.gitlab-ci.yml  build_conda_image.gitlab-ci.yml  build_conda_tool.gitlab-ci.yml  build_docker_image.gitlab-ci.yml  doc.gitlab-ci.yml
conda-bld/: channeldata.json  index.html
conda_recipe/: .gitlab-ci.yml  bld.bat  build.sh  conda.gitlab-ci.yml  env-bim2sim.toml  (+5 more)
(+31781 files in other folders)
